<resources>
    <string name="app_name">Promoters-Zone</string>
    <string name="organizer_string">Organizer</string>
    <string name="promoter_string">Promoter</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email_empty_err_msg">Email can\'t be empty</string>
    <string name="password_empty_err_msg">Password can\'t be empty</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="register">Sign Up</string>
    <string name="name_empty_err_msg">Name can\'t be empty</string>
    <string name="username_empty_err_msg">Username can\'t be empty</string>
    <string name="phone_empty_err_msg">Phone can\'t be empty</string>
    <string name="new_member">New Member</string>
    <string name="create">Create</string>
    <string name="title">Event Title</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="apply">Apply</string>
    <string name="candidates_promoters">Candidates Promoters</string>
    <string name="rank">Rank</string>
    <string name="accept">Accept</string>
    <string name="promoter_name">Promoter Name</string>
    <string name="event_rank">Rank: %d</string>
</resources>
