<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".login.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo3"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="32dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_as"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/coming_soon"
            android:text="Login As"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>

        <RadioGroup
            android:id="@+id/role_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/organizer_role"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/organizer_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/colorAccent"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/organizer_string"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:layout_marginEnd="32dp"/>

            <RadioButton
                android:id="@+id/promoter_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/promoter_string"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:buttonTint="@color/colorAccent" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/colorThird"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorThird"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/login_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn_rounded_color_accent"
                android:fontFamily="@font/amaranth_bold"
                android:onClick="onLoginClicked"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingBottom="8dp"
            android:text="DON'T HAVE AN ACCOUNT?  "
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/ubuntu_medium"
            android:onClick="OnRegisterClicked"
            android:text="SIGN UP"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>