<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".organizer_section.new_event.NewEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="New Event" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <EditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:hint="@string/title"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorThird"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/startdate_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <EditText
                android:id="@+id/startdate_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:hint="@string/start_date"
                android:inputType="date"
                android:maxLines="1"
                android:textColor="@color/colorThird"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enddate_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <EditText
                android:id="@+id/enddate_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:hint="@string/end_date"
                android:inputType="date"
                android:maxLines="1"
                android:textColor="@color/colorThird"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:text="Region"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_rounded_color_primary">

            <Spinner
                android:id="@+id/regions_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/coming_soon"
                android:text="Required SKILLS"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_skill_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:onClick="addNewSkill"
                android:src="@drawable/ic_add"
                app:fabSize="normal" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/add_skill_fab"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:id="@+id/required_skills_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/coming_soon"
                    android:gravity="center"
                    android:text="Skill Name"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/coming_soon"
                    android:gravity="center"
                    android:text="Promoters Num"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <!--<View-->
            <!--android:id="@+id/view2"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="2dp"-->
            <!--android:background="@color/colorPrimary"-->
            <!--android:layout_below="@id/required_skills_header"-->
            <!--android:layout_marginStart="16dp"-->
            <!--android:layout_marginEnd="16dp" />-->

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/required_skills_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <!--<com.android.promoters.EmptyRecyclerView-->
            <!--android:id="@+id/event_required_skills_list_rv"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent" />-->

            <LinearLayout
                android:id="@+id/empty_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/skill_lamb" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/coming_soon"
                    android:text="ADD YOUR FIRST SKILL"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!--<ProgressBar-->
            <!--android:id="@+id/progress_bar"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center" />-->

        </LinearLayout>


    </LinearLayout>

</ScrollView>